<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estadisticas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom">

        <TextView
            android:id="@+id/tvNumeroPuesto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Puesto" />

        <TextView
            android:id="@+id/tvtxtNombreEquipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NombreEquipo" />

        <TextView
            android:id="@+id/tvtxtPuntos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Puntos" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="596dp"
        android:layout_above="@id/barra_navegacion"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="0dp">


        <ListView
            android:id="@+id/ListEstadisticas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="2dp"
            android:divider="@color/black" />
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barra_navegacion"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>